--- a/client/styles/_variable.styl
+++ b/client/styles/_variable.styl
@@ -4,5 +4,72 @@ $Montserrat = 'Montserrat', Arial, sans-serif;
 //color
 $black = #1e2327;
 $blue = #61dafb;
+$blue-primary = #40a9ff;
+$gray = #f0f0f0;
 $gray-dark = #333;
+
+/*
+  Colouring AntDesign
+ */
+
+//antdesign-color : red
+$red-1 = #fff1f0;
+$red-2 = #ffccc7;
+$red-3 = #ffa39e;
+$red-4 = #ff7875;
+$red-5 = #ff4d4f;
+$red-6 = #f5222d;
+$red-7 = #cf1322;
+$red-8 = #a8071a;
+$red-9 = #820014;
+$red-10 = #5c0011;
+
+//antdesign-color : green
+$green-1 = #f6ffed
+$green-2 = #d9f7be
+$green-3 = #b7eb8f
+$green-4 = #95de64
+$green-5 = #73d13d
+$green-6 = #52c41a
+$green-7 = #389e0d
+$green-8 = #237804
+$green-9 = #135200
+$green-10 = #092b00
+
+//antdesign-color : blue
+$blue-1 = #e6f7ff
+$blue-2 = #bae7ff
+$blue-3 = #91d5ff
+$blue-4 = #69c0ff
+$blue-5 = #40a9ff
+$blue-6 = #1890ff
+$blue-7 = #096dd9
+$blue-8 = #0050b3
+$blue-9 = #003a8c
+$blue-10 = #002766
+
+//antdesign-color : yellow
+$yellow-1 = #feffe6
+$yellow-2 = #ffffb8
+$yellow-3 = #fffb8f
+$yellow-4 = #fff566
+$yellow-5 = #ffec3d
+$yellow-6 = #fadb14
+$yellow-7 = #d4b106
+$yellow-8 = #ad8b00
+$yellow-9 = #876800
+$yellow-10 = #614700
+
+//antdesign-color : grey
+$grey-1 = #ffffff
+$grey-2 = #fafafa
+$grey-3 = #f5f5f5
+$grey-4 = #e8e8e8
+$grey-5 = #d9d9d9
+$grey-6 = #bfbfbf
+$grey-7 = #8c8c8c
+$grey-8 = #595959
+$grey-9 = #262626
+$grey-10 = #000000
+
 $white-off = #fafafa;
