:sparkles: NEW FEATURES | Add Auth Pages and Firebase Authentication

--- a/client/components/navigation/style.styl
+++ b/client/components/navigation/style.styl
@@ -19,9 +19,12 @@
 
 .footer {
   background-color: $blue;
+  padding: 18px
 	
 	p {
 		text-align: center;
 		font-size: 0.95em;
+    color: #fff
+    margin-bottom: 0px
 	}
 }
