--- a/client/pages/thread/thread-detail.styl
+++ b/client/pages/thread/thread-detail.styl
@@ -22,24 +22,32 @@
     .detail-comment
       h3
         border-bottom 1px solid $grey-6
-        width 50%
+        max-width 600px
         font-size 1em
       &__list
-        width 50%
+        max-width 600px
         height 250px
         overflow scroll
         background white
-        border-radius 6px
+        border-radius 3px
+        border 1px solid $grey-5
         padding 3px 12px
         .comment-item
           padding 3px 0px
           border-bottom 0
+          margin-bottom 6px
+          h4
+            margin-bottom 0px
           &__icon
-            font-size 32px
-            padding-top 24px
+            font-size 30px
+            padding-top 22px
           &__title
             font-size 1em
             font-weight bolder
+          &__date
+            font-size 0.8em
+            margin-left 6px
+            margin-bottom 0
           &__desc
             .desc
               &-text
@@ -48,11 +56,10 @@
                 background-color $green-6
                 display inline-block
                 color white
-                padding 6px
+                padding 3px 6px
                 border-radius 3px
-              &-createdat
-                font-size 0.8em
-                font-style italic
-                margin-bottom 0
       &__form
-        color white
+        margin-top 6px
+        padding-top 6px
+        border-top 1px solid $grey-6
+        max-width 600px
