--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -4,7 +4,7 @@
 @import '~antd/dist/antd.css'
 
 body
-  background: offwhite
+  background: #f0f2f5
   font-family: $Montserrat !important;
   
   p
