:wrench: FIXING | Minimize space between .comment-item

--- a/client/pages/thread/thread-detail.styl
+++ b/client/pages/thread/thread-detail.styl
@@ -36,6 +36,9 @@
           padding 3px 0px
           border-bottom 0
           margin-bottom 6px
+          .ant-list-item
+            padding-top 6px
+            padding-bottom 6px
           &__own
             float right
             width 100%
