:wrench: FIXING | Header icon and title

--- a/client/components/navigation/style.styl
+++ b/client/components/navigation/style.styl
@@ -4,17 +4,24 @@
 	background-color: $blue;
 
 	&-logo {
+    position: fixed;
+    top: 4px;
+    margin: 0;
 		width: 120px;
     height: 31px;
-    background: rgba(255,255,255,.2);  
-    margin: 16px 24px 16px 0;
-    float: left;
+
+    i {
+      font-size: 2em
+      color: white
+      font-weight: bold
+    }
   }
 
-  h3 {
+  h1 {
     color: #fff;
-    display: inline;
-    width: 80%;
+    margin-left: 34px;
+    position: fixed;
+    font-size: 2.2em;
   }
 
   &-user {
