:wrench: FIXING | Pages Thread Form

--- a/client/pages/thread/thread-form.styl
+++ b/client/pages/thread/thread-form.styl
@@ -1,8 +1,18 @@
+@import '../../styles/_variable.styl'
+
 .thread-form
   content
     .form
+      max-width 600px
       &-item
         margin-bottom 6px
         .ant-form-item
           &-label
             line-height 30px
+      .btn
+        &-add
+          background-color $green-6
+          border-color $green-7
+        &-update
+          background-color $yellow-6
+          border-color $yellow-7
