:sparkles: NEW FEATURES | Form Thread validation

--- a/client/pages/thread/thread-form.styl
+++ b/client/pages/thread/thread-form.styl
@@ -9,6 +9,11 @@
         .ant-form-item
           &-label
             line-height 30px
+        .message
+          &-error
+            font-size 0.9em
+            line-height 2em
+            color red
       .btn
         &-add
           background-color $green-6
