--- a/client/pages/thread/thread-detail.styl
+++ b/client/pages/thread/thread-detail.styl
@@ -90,3 +90,6 @@
         padding-top 6px
         border-top 1px solid $grey-6
         max-width 600px
+      .ant-divider
+        font-size 0.6em
+        text-transform uppercase
