--- a/client/pages/auth/auth.styl
+++ b/client/pages/auth/auth.styl
@@ -13,6 +13,12 @@
       .message-error
         color $red-4
         margin-top 6px
+      .btn
+        &-signin
+          background $blue-4
+        &-signup
+          background $green-4
+          border-color $green-6
   &-footer
     border-top 1px solid $grey-4
     padding-top 12px
